--- a/index.html
+++ b/index.html
@@ -14,8 +14,45 @@ function script() {
 	currentDate = new Date();
 	document.getElementById("start").innerHTML = start;
 	const milliseconds = currentDate-start;
-	document.getElementById("days").innerHTML = Math.floor(milliseconds / 1000 / 60 / 60 / 24);
+	document.getElementById("days").innerHTML = milliseconds.millisToDays();
+	document.getElementById("dagViering").innerHTML = dagViering(milliseconds);
 	document.getElementById("months").innerHTML = calculateMonths(start, currentDate);
+	document.getElementById("hours").innerHTML = Math.floor(milliseconds / 1000 / 60 / 60);
+	document.getElementById("minutes").innerHTML = Math.floor(milliseconds / 1000 / 60);
+	document.getElementById("seconds").innerHTML = Math.floor(milliseconds / 1000);
+	document.getElementById("secondeViering").innerHTML = secondeViering(milliseconds);
+	document.getElementById("maandViering").innerHTML = maandViering(currentDate);
+}
+
+Number.prototype.millisToDays = function () {
+	return Math.floor(this / 1000 / 60 / 60 / 24);
+}
+
+Number.prototype.millisToSeconds = function() {
+	return Math.floor(this / 1000);
+};
+
+function secondeViering(elapsed) {
+	if (elapsed.millisToSeconds % 1000000 === 0) {
+		return "oooowwww yes";
+	} else {
+		return "";
+	}
+}
+function dagViering(elapsed) { 
+	if (elapsed.millisToDays() === 42 || elapsed.millisToDays() % 100 === 0) {
+			return "wooohoooooo!!!";
+		} else {
+			return "";
+		}
+}
+
+function maandViering(current){
+	if (current.getDate() === start.getDate()) {
+		return "Jippieee";
+	} else {
+		return "";
+	}
 }
 
 function calculateMonths(from, to) {
@@ -30,10 +67,13 @@ function calculateMonths(from, to) {
 
 </script> 
 </head>
-<body onload="script();">
+<body onload="script(); setInterval(script, 1000);">
 <div> Startdatum: <span id="start"></span></div>
-<div> Dagen: <span id="days"></span></div>
-<div> Maanden: <span id="months"></span></div>
+<div> Dagen: <span id="days"></span> <span id="dagViering"></span></div>
+<div> Maanden: <span id="months"></span> <span id="maandViering"></span></div>
+<div> Uren: <span id="hours"></span></div>
+<div> Minuten: <span id="minutes"></span></div>
+<div> Secondes: <span id="seconds"></span><span id="secondeViering"></span></div>
 &lt;3
 </body>
 </html>
