--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@ function script() {
 	document.getElementById("dagViering").innerHTML = dagViering(milliseconds);
 	document.getElementById("months").innerHTML = calculateMonths(start, currentDate);
 	document.getElementById("hours").innerHTML = Math.floor(milliseconds / 1000 / 60 / 60);
-	document.getElementById("minutes").innerHTML = Math.floor(milliseconds / 1000 / 60);
 	document.getElementById("seconds").innerHTML = Math.floor(milliseconds / 1000);
 	document.getElementById("secondeViering").innerHTML = secondeViering(milliseconds);
 	document.getElementById("maandViering").innerHTML = maandViering(currentDate);
@@ -48,10 +47,10 @@ function secondeViering(elapsed) {
 }
 function dagViering(elapsed) { 
 	if (elapsed.millisToDays() === 42 || elapsed.millisToDays() % 100 === 0) {
-			return "wooohoooooo!!!";
-		} else {
-			return "";
-		}
+		return "wooohoooooo!!!";
+	} else {
+		return "";
+	}
 }
 
 function maandViering(current){
@@ -75,12 +74,11 @@ function calculateMonths(from, to) {
 </script> 
 </head>
 <body onload="script(); setInterval(script, 1000);">
-<div style="position:absolute; top:50%; left:50%; -ms-transform: translateX(-50%) translateY(-50%); -webkit-transform: translate(-50%,-50%); transform: translate(-50%,-50%);">
-	<div> Startdatum: <span id="start"></span></div>
-	<div> Dagen: <span id="days"></span> <span id="dagViering"></span></div>
+<div style="position:absolute; top:50%; left:50%; width: 100vw; font-size: 4vw; text-align: center; -ms-transform: translateX(-50%) translateY(-50%); -webkit-transform: translate(-50%,-50%); transform: translate(-50%,-50%);">
+	<div id="start"></div>
 	<div> Maanden: <span id="months"></span> <span id="maandViering"></span></div>
+	<div> Dagen: <span id="days"></span> <span id="dagViering"></span></div>
 	<div> Uren: <span id="hours"></span></div>
-	<div> Minuten: <span id="minutes"></span></div>
 	<div> Secondes: <span id="seconds"></span> <span id="secondeViering"></span></div>
 
 	<div> &lt;3 <span id="laatsteMijlpaal" /> </div>
