--- a/fine.html
+++ b/fine.html
@@ -1,41 +1,58 @@
 <html>
-	<head>
-		<link href="https://fonts.googleapis.com/css?family=Leckerli+One" rel="stylesheet">  
+	<head> 
+		<link href="https://fonts.googleapis.com/css?family=Amatic+SC|Kalam" rel="stylesheet">
 		<style>
 		body {
 			background-color: linen;
-			font-family: 'Leckerli One', cursive;
+			font-family: 'Kalam', cursive;
 			font-size: 1.5em; 
+			color: rgb(150,50,50);
 			text-align: center;
+		}
+		h1 {
+			font-family: 'Amatic SC', cursive;
+			font-size: 2em;
 		}
 		</style>
 	</head>
 	<body>
-		<img src="sint1.jpg" height="250"> <img src="sint2.jpg" height="250">
-		<p>
-			Lief JGZ-P teamlid,
-		</p>
-		<p>
-			Sint liep over de daken bij Topicus met Americo.<br>
-			Hij zag de refinement en vond het een beetje zo-zo.
-		</p>
-		<p>
-			Laatste retro zei het team:<br> 
-			Goede refinements, dat scheelt een heleboel!<br>
-			De scrum sint vraagt nu: lever een mooie post it in,<br>
-			met daarop in een paar woorden of een zin,<br>
-			van refinements het doel.<br>
-			Besteed er niet teveel tijd aan, hooguit een minuut of twee.<br>
-			Daarmee is de scrum sint zeker al dik tevree.
-		</p>
-		<p>
-			Heb je nog tips voor energie en goede moed,<br> 
-			dan ontvangt sint ze natuurlijk evengoed.<br>
-			Alles voor een effectief team met goed gemoed!
-		</p>
-		<p>
-			Liefs, Scrum Sint aka Renate
-		</p>
-		<iframe width="560" height="315" src="https://www.youtube.com/embed/yXDv3rIf_yk?rel=0" frameborder="0" allowfullscreen></iframe>
+		<div style="margin-left:auto; margin-right:auto ; width: 700px; background-color: rgb(250,200,200);">
+			<h1>Van refinement naar re-OH-SO-FINE-ment</h1>
+			<img src="sint1.jpg" height="250"> <img src="sint2.jpg" height="250">
+			<p>
+				Lief JGZ-P teamlid,
+			</p>
+			<p>
+				Sint liep over de daken bij Topicus met Americo.<br>
+				Hij zag de refinement en vond het een beetje zo-zo.
+			</p>
+			<p>
+				Laatste retro zei het team:<br> 
+				"Goede refinements, dat scheelt een heleboel!"<br>
+				De scrum sint vraagt nu: <br>
+				<b>Lever een mooie post it in,<br>
+				met daarop in een paar woorden of een zin,<br>
+				van refinements volgens jou het doel.</b><br>
+				(De zin is een beetje krom <br>
+				maar jij bent vast niet dom<br>
+                                en snapt dat het gaat <br>
+				om een beschrijving van het doel van refinements<br>
+				op een klein formaat)</br>
+				Besteed er niet teveel tijd aan, hooguit een minuut of twee.<br>
+				Daarmee is de scrum sint zeker al dik tevree.
+			</p>
+			<p>
+				Heb je nog tips voor energie en goede moed,<br> 
+				dan ontvangt sint ze natuurlijk evengoed.<br>
+				Alles voor een effectief team met goed gemoed!
+			</p>
+			<p>
+				Liefs, Scrum Sint aka Renate
+			</p>
+			<div>
+				<iframe width="560" height="315" src="https://www.youtube.com/embed/yXDv3rIf_yk?rel=0" frameborder="0" allowfullscreen></iframe>
+			</div>
+			<br>
+		</div>
 	</body>
 </html>
