viewport tag toevoegen

--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN">
 <html>
 <head>
-  <meta charset = "UTF-8">
+  <meta charset="UTF-8">
+  <meta name="description" content="Rijschool Renate">
+  <meta name="keywords" content="rijles, autorijles, deventer">
+  <meta name="author" content="Renate Bresser">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Rijschool Renate</title>
-  <link rel = "stylesheet"
-   type = "text/css"
-   href = "style.css" />
+  <link rel = "stylesheet" type = "text/css" href = "style.css" />
   <link href="https://fonts.googleapis.com/css2?family=Hind+Vadodara:wght@300;400;500;600;700&display=swap" rel="stylesheet"> 
 </head>
 
