--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
       <li><a href="#">Home</a></li>
       <li><a href="#headline2">Lesprijs</a></li>
       <li><a href="#headline1">Over mij</a></li>
+      <li><a href="#contact">Contact</a></li>
     </ul>
   </nav>
   <a href="#main-menu-toggle"
@@ -199,8 +200,42 @@
     </div>
   </div>
 
-  <div class="section-wrapper">
+  <div class="section-wrapper" id="contact">
     <div class="section final-section">
+       <div class="container">
+<form action="mail.php" method="POST">
+<p>Name</p> <input type="text" name="name">
+<p>Email</p> <input type="text" name="email">
+<p>Phone</p> <input type="text" name="phone">
+
+<p>Request Phone Call:</p>
+Yes:<input type="checkbox" value="Yes" name="call"><br />
+No:<input type="checkbox" value="No" name="call"><br />
+
+<p>Website</p> <input type="text" name="website">
+
+<p>Priority</p>
+<select name="priority" size="1">
+<option value="Low">Low</option>
+<option value="Normal">Normal</option>
+<option value="High">High</option>
+<option value="Emergency">Emergency</option>
+</select>
+<br />
+
+<p>Type</p>
+<select name="type" size="1">
+<option value="update">Website Update</option>
+<option value="change">Information Change</option>
+<option value="addition">Information Addition</option>
+<option value="new">New Products</option>
+</select>
+<br />
+
+<p>Message</p><textarea name="message" rows="6" cols="25"></textarea><br />
+<input type="submit" value="Send"><input type="reset" value="Clear">
+</form>
+</div> 
     </div>
   </div>
 
