--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
   <div class="section-wrapper" id="contact">
     <div class="section final-section">
        <div class="container">
-<form action="mail.php" method="POST">
+<form name="input" method="POST" action="https://formspree.io/renatebresser@hotmail.com">
 <p>Name</p> <input type="text" name="name">
 <p>Email</p> <input type="text" name="email">
 <p>Phone</p> <input type="text" name="phone">
@@ -212,28 +212,9 @@
 Yes:<input type="checkbox" value="Yes" name="call"><br />
 No:<input type="checkbox" value="No" name="call"><br />
 
-<p>Website</p> <input type="text" name="website">
-
-<p>Priority</p>
-<select name="priority" size="1">
-<option value="Low">Low</option>
-<option value="Normal">Normal</option>
-<option value="High">High</option>
-<option value="Emergency">Emergency</option>
-</select>
-<br />
-
-<p>Type</p>
-<select name="type" size="1">
-<option value="update">Website Update</option>
-<option value="change">Information Change</option>
-<option value="addition">Information Addition</option>
-<option value="new">New Products</option>
-</select>
-<br />
-
-<p>Message</p><textarea name="message" rows="6" cols="25"></textarea><br />
-<input type="submit" value="Send"><input type="reset" value="Clear">
+<input type="submit" value="Send">
+<input type="hidden" name="_subject" value="Enter your subject here" />
+<input type="hidden" name="_next" value="#" />
 </form>
 </div> 
     </div>
