whatsapp en bellen testen

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 <!-- NAVIGATION HEADER -->
 <header>
   <div class="contact-items">
-    <a href="#">WHATSAPP</a>
-    <a href="#">BELLEN</a>
+    <a href="https://wa.me/31681487522" target="_blank">WHATSAPP</a>
+    <a href="tel:0681487522">BELLEN</a>
   </div>
 
   <div id="main-menu-toggle" class="menu-toggle">
@@ -32,10 +32,10 @@
       <span aria-hidden="true">CLOSE</span>
     </a>
     <ul>
-      <li><a href="#">Home</a></li>
-      <li><a href="#headline2">Lesprijs</a></li>
-      <li><a href="#headline1">Over mij</a></li>
-      <li><a href="#contact">Contact</a></li>
+      <li><a class="home" href="#">Home</a></li>
+      <li><a class="blue" href="#headline2">Lesprijs</a></li>
+      <li><a class="yellow" href="#headline1">Over mij</a></li>
+      <li><a class="orange" href="#contact">Contact</a></li>
     </ul>
   </nav>
   <a href="#main-menu-toggle"
@@ -202,21 +202,6 @@
 
   <div class="section-wrapper" id="contact">
     <div class="section final-section">
-       <div class="container">
-<form name="input" method="POST" action="https://formspree.io/renatebresser@hotmail.com">
-<p>Name</p> <input type="text" name="name">
-<p>Email</p> <input type="text" name="email">
-<p>Phone</p> <input type="text" name="phone">
-
-<p>Request Phone Call:</p>
-Yes:<input type="checkbox" value="Yes" name="call"><br />
-No:<input type="checkbox" value="No" name="call"><br />
-
-<input type="submit" value="Send">
-<input type="hidden" name="_subject" value="Enter your subject here" />
-<input type="hidden" name="_next" value="#" />
-</form>
-</div> 
     </div>
   </div>
 
