--- a/index.html
+++ b/index.html
@@ -12,63 +12,43 @@
 </head>
 
 <body>
-
-<!-- NAVIGATION HEADER -->
-<header>
-  <div class="contact-items">
-    <a href="https://wa.me/31681487522" target="_blank">WHATSAPP</a>
-    <a href="tel:0681487522">BELLEN</a>
-  </div>
-
-  <div id="main-menu-toggle" class="menu-toggle">
-    <a href="#main-menu">MENU</a>
-  </div>
-  
-  <nav id="main-menu" class="main-menu" aria-label="Main menu">
-    <a href="#main-menu-toggle"
-       id="main-menu-close"
-       class="menu-close"
-       aria-label="Close main menu">
-      <span aria-hidden="true">CLOSE</span>
-    </a>
-    <ul>
-      <li><a class="home" href="#">Home</a></li>
-      <li><a class="blue" href="#headline2">Lesprijs</a></li>
-      <li><a class="yellow" href="#headline1">Over mij</a></li>
-      <li><a class="orange" href="#contact">Contact</a></li>
-    </ul>
-  </nav>
-  <a href="#main-menu-toggle"
-     class="backdrop"
-     tabindex="-1"
-     aria-hidden="true" hidden></a>
-</header>
-
-
-<!-- Navigatie-menu 
-<nav role="navigation" class="navbar">
-  <div class="hamburger-menu hide-on-large-screen">
-    <span></span>
-    <span></span>
-    <span></span>
-
-    <div class="dropdown-content">
-      <p>Hello World!</p>
+  <header>
+    <div class="contact-items">
+      <a href="https://wa.me/31681487522" target="_blank">WHATSAPP</a>
+      <a href="tel:0681487522">BELLEN</a>
     </div>
-  </div>
 
-  <div class="hide-on-small-screen">
-    <a class="home" href="#">Home</a>
-    <a class="blue" href="#headline2">Lesprijs</a>
-    <a class="yellow" href="#headline1">Over mij</a>
-  </div>
-
-  <div class="navbar-phone">
-    <a href="https://wa.me/31681487522" target="_blank"><img src="images/WhatsApp_Logo_1.png" class="whatsapp-logo"></a>
-    <a href="tel:0681487522">0681487522</a>
-  </div>
-</nav>
--->
+    <div id="main-menu-toggle" class="menu-toggle">
+      <a href="#main-menu">
+        <div class="hamburgerbar"></div>
+        <div class="hamburgerbar"></div>
+        <div class="hamburgerbar"></div>
+      </a>
+    </div>
+  
+    <nav id="main-menu" class="main-menu" aria-label="Main menu">
+      <a href="#main-menu-toggle"
+         id="main-menu-close"
+         class="menu-close"
+         aria-label="Close main menu">
+        <div class="cross" aria-hidden="true">
+          <div></div>
+          <div></div>
+        </div>
+      </a>
+      <ul>
+        <li><a class="home" href="#">Home</a></li>
+        <li><a class="blue" href="#headline2">Lesprijs</a></li>
+        <li><a class="yellow" href="#headline1">Over mij</a></li>
+        <li><a class="orange" href="#contact">Contact</a></li>
+      </ul>
+    </nav>
+    <a href="#main-menu-toggle"
+       class="backdrop"
+       tabindex="-1"
+       aria-hidden="true" hidden>
+    </a>
+</header>
 
 <div class="main">
   <div class="hero">
