--- a/index.html
+++ b/index.html
@@ -13,13 +13,16 @@
 
 <body>
   <header>
+    <div class="navbar"></div>
     <div class="contact-items">
-      <a href="https://wa.me/31681487522" target="_blank">WHATSAPP</a>
+      <a href="https://wa.me/31681487522" target="_blank">
+        <img class="whatsapp-logo" src="images/whatsapp_logo.png">
+      </a>
       <a href="tel:0681487522">BELLEN</a>
     </div>
 
     <div id="main-menu-toggle" class="menu-toggle">
-      <a href="#main-menu">
+      <a class="hamburger" href="#main-menu">
         <div class="hamburgerbar"></div>
         <div class="hamburgerbar"></div>
         <div class="hamburgerbar"></div>
