--- a/index.html
+++ b/index.html
@@ -15,10 +15,8 @@
   <header>
     <div class="navbar"></div>
     <div class="contact-items">
-      <a href="https://wa.me/31681487522" target="_blank">
-        <img class="whatsapp-logo" src="images/whatsapp_logo.png">
-      </a>
-      <a href="tel:0681487522">BELLEN</a>
+      <a class="whatsapp" href="https://wa.me/31681487522" target="_blank">WhatsApp</a>
+      <a class="phone" href="tel:0681487522">06 8148 7522</a>
     </div>
 
     <div id="main-menu-toggle" class="menu-toggle">
