geschikt voor mobiel en grote schermen

--- a/index.html
+++ b/index.html
@@ -14,9 +14,13 @@
 <body>
   <header>
     <div class="navbar"></div>
+    <div class="navbar-extension"></div>
+
     <div class="contact-items">
-      <a class="whatsapp" href="https://wa.me/31681487522" target="_blank">WhatsApp</a>
-      <a class="phone" href="tel:0681487522">06 8148 7522</a>
+      <a class="telefoon pointy-thingy" href="https://wa.me/31681487522" target="_blank">
+        <div>WhatsApp</div>
+      </a>
+      <a class="telefoon" href="tel:0681487522">Bel</a>
     </div>
 
     <div id="main-menu-toggle" class="menu-toggle">
@@ -56,8 +60,7 @@
     <img class="hero-img" src="https://www.anwb.nl/binaries/content/gallery/anwb/collecties/autotests/occasion/volkswagen/up/T__2003__3910000c.jpg" alt="">
       
     <div class="selling-points">
-      <div class="price">&euro;38,-</div>
-      <div class="circle"><div class="inner">gratis proefles</div></div>
+      <div class="trial-lesson"><a href="https://wa.me/31681487522?text=Hallo%2C+ik+zou+graag+een+gratis+proefles+willen+boeken" class="inner" target="_blank">boek nu een gratis proefles</a></div>
     </div>
   </div>
 
@@ -111,22 +114,22 @@
       <section class="table">
         <div class="row">
           <div class="col">Rijles</div>
-          <div class="col">&euro; 38</div>
+          <div class="col nowrap">&euro; 38</div>
           <div class="col">1 uur (60 minuten)</div>
         </div>
         <div class="row">
           <div class="col">CBR Tussentijdse toets</div>
-          <div class="col">&euro; 196</div>
+          <div class="col nowrap">&euro; 196</div>
           <div class="col">2 uur waarvan 55 minuten toets</div>
         </div>
         <div class="row">
           <div class="col">CBR praktijkexamen</div>
-          <div class="col">&euro; 196</div>
+          <div class="col nowrap">&euro; 196</div>
           <div class="col">2 uur waarvan 55 minuten examen</div>
         </div>
         <div class="row">
           <div class="col">CBR faalangst praktijkexamen</div>
-          <div class="col">&euro; 244</div>
+          <div class="col nowrap">&euro; 244</div>
           <div class="col">2 uur waarvan 1 uur en 20 minuten examen</div>
         </div>
       </section>
@@ -134,21 +137,21 @@
       
       <h2>Hoeveel kost het rijbewijs?</h2>
       <div class="column">
-        <table class="table total-cost-comparison column-30">
+        <table class="table total-cost-comparison">
           <tr>
             <td>38 lesuren</td>
-            <td class="col-renate">&euro; 1.444</td>
+            <td class="col-renate nowrap">&euro; 1.444</td>
           </tr>
           <tr>
             <td>2 examens</td>
-            <td class="col-renate">&euro; 392</td>
+            <td class="col-renate nowrap">&euro; 392</td>
           </tr>
           <tr>
             <td></td>
-            <td class="col-renate-total">&euro; 1.836</td>
+            <td class="col-renate-total nowrap">&euro; 1.836</td>
           </tr>
         </table>
-        <div class="column-70">
+        <div class="costs-explained">
           <p>Gemiddeld neemt men 38,56 uur les en haalt men het examen in 2 keer. Het rekenvoorbeeld is gebaseerd op onderzoek van het CBR uit 2019. Lees hier meer over de kosten van het halen van je rijbewijs in het artikel van het CBR: <a href="https://www.cbr.nl/rijbewijstips/kosten-rijbewijs-halen/" target="_blank">Wat kost een rijbewijs halen gemiddeld?</a>
         </div>
       </div>
