--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
     <div class="navbar-extension"></div>
 
     <div class="contact-items">
-      <a class="telefoon pointy-thingy" href="https://wa.me/31681487522" target="_blank">
+      <a class="phone pointy-thingy" href="https://wa.me/31681487522" target="_blank">
         <div>WhatsApp</div>
       </a>
-      <a class="telefoon" href="tel:0681487522">Bel</a>
+      <a class="phone" href="tel:0681487522">06 8148 7522</a>
     </div>
 
     <div id="main-menu-toggle" class="menu-toggle">
@@ -108,52 +108,45 @@
   <div class="section-wrapper" id="headline2"> 
     <div class="section">
       <h1>Lesprijs</h1>
-      <p>Afgezien van acties en proeflessen betaal je voor ieder uur dezelfde prijs. Je betaalt steeds de ingeplande lessen vooruit per bankoverschrijving of tikkie.</p>
-      <p>Voor de examens betaal je de kosten die het CBR rekent en de tijd die je vooraf en tijdens het examen rijdt, zonder bijkomende kosten.
-      </p>
-      <section class="table">
-        <div class="row">
-          <div class="col">Rijles</div>
-          <div class="col nowrap">&euro; 38</div>
-          <div class="col">1 uur (60 minuten)</div>
+      <div class="costs-explained">
+        <p>Afgezien van acties en proeflessen betaal je voor ieder uur dezelfde prijs. Je betaalt steeds de ingeplande lessen vooruit per bankoverschrijving of tikkie.</p>
+        <p>Voor de examens betaal je de kosten die het CBR rekent en de tijd die je vooraf en tijdens het examen rijdt, zonder bijkomende kosten.
+        </p>
+      </div>
+      <div class="prices">
+        <div class="item-description-price">
+          <div>
+            <div class="priced-item">Rijles</div>
+            <div class="item-description">1 uur (60 minuten)</div>
+          </div>
+          <div class="item-price nowrap">&euro; 38</div>
         </div>
-        <div class="row">
-          <div class="col">CBR Tussentijdse toets</div>
-          <div class="col nowrap">&euro; 196</div>
-          <div class="col">2 uur waarvan 55 minuten toets</div>
+        <div class="item-description-price">
+          <div>   
+            <div class="priced-item">CBR Tussentijdse toets</div>
+            <div class="item-description">2 uur waarvan 55 minuten toets</div>
+          </div>
+          <div class="item-price nowrap">&euro; 196</div>
+        </div>        
+        <div class="item-description-price">
+          <div>
+            <div class="priced-item">CBR praktijkexamen</div>
+            <div class="item-description">2 uur waarvan 55 minuten examen</div>
+          </div>
+          <div class="item-price nowrap">&euro; 196</div>
+        </div>       
+        <div class="item-description-price">
+          <div>      
+            <div class="priced-item">CBR faalangst praktijkexamen</div>
+            <div class="item-description">2 uur waarvan 1 uur en 20 minuten examen</div>
+          </div>
+          <div class="item-price nowrap">&euro; 244</div>
         </div>
-        <div class="row">
-          <div class="col">CBR praktijkexamen</div>
-          <div class="col nowrap">&euro; 196</div>
-          <div class="col">2 uur waarvan 55 minuten examen</div>
-        </div>
-        <div class="row">
-          <div class="col">CBR faalangst praktijkexamen</div>
-          <div class="col nowrap">&euro; 244</div>
-          <div class="col">2 uur waarvan 1 uur en 20 minuten examen</div>
-        </div>
-      </section>
+      </div>
 
-      
-      <h2>Hoeveel kost het rijbewijs?</h2>
-      <div class="column">
-        <table class="table total-cost-comparison">
-          <tr>
-            <td>38 lesuren</td>
-            <td class="col-renate nowrap">&euro; 1.444</td>
-          </tr>
-          <tr>
-            <td>2 examens</td>
-            <td class="col-renate nowrap">&euro; 392</td>
-          </tr>
-          <tr>
-            <td></td>
-            <td class="col-renate-total nowrap">&euro; 1.836</td>
-          </tr>
-        </table>
-        <div class="costs-explained">
-          <p>Gemiddeld neemt men 38,56 uur les en haalt men het examen in 2 keer. Het rekenvoorbeeld is gebaseerd op onderzoek van het CBR uit 2019. Lees hier meer over de kosten van het halen van je rijbewijs in het artikel van het CBR: <a href="https://www.cbr.nl/rijbewijstips/kosten-rijbewijs-halen/" target="_blank">Wat kost een rijbewijs halen gemiddeld?</a>
-        </div>
+      <div class="costs-explained">
+        <p>Gemiddeld neemt men 38,56 uur les en haalt men het examen in 2 keer. Wil je meer weten over de kosten waar je rekening mee moet houden? Lees dan het artikel van het CBR: <a href="https://www.cbr.nl/rijbewijstips/kosten-rijbewijs-halen/" target="_blank">Wat kost een rijbewijs halen gemiddeld?</a>
+        </p>
       </div>
     </div>
   </div>
@@ -162,30 +155,26 @@
     <div class="section">
       <h1>Dit ben ik</h1>
       <div class="about-me">
-         <img class="portrait" alt="" src="https://pbs.twimg.com/profile_images/662675852929445893/_Sx0l93S_400x400.jpg">
-         <div class="multiple-p">
-           <p>
-             <em>Vriendelijkheid, rust, duidelijkheid en af en toe een grapje</em> mag je van mij verwachten. Verder ben ik precies en gedreven. Perfectionist? Neehoor, maar ik haal wel graag het best mogelijke uit mijzelf.
-           </p>
-           <p>
-             Mijn uitdaging als instructeur is om jou zo snel en goed mogelijk naar je rijbewijs te begeleiden door bij jouw behoeftes aan te sluiten. Een duidelijke uitleg met tekening? Gewoon nog eens proberen? We passen toe wat voor jou werkt.
-           </p>
-           <p>
-             Voor ik mijn avontuur als rijinstructeur begon werkte ik als software ontwikkelaar, een creatief en uitdagend beroep. Ik ben omgeschoold tot rijinstructeur omdat ik het altijd al erg leuk vond om een ander iets te leren. 
-           </p>
-        </div>
-         <div>
-           <h2>Mijn autorijbewijs</h2>
-           <p>
-             Ik was 22 toen ik mijn rijbewijs haalde. Wat een machtig gevoel om zo'n machine in beweging te zetten! Met mijn protesterende bankrekening vond ik het wel spannend of ik het in &eacute;&eacute;n keer zou halen. De laatste drie lessen was ik al zenuwachtig. Tijdens mijn examen was ik zo gestrest dat ik me bij de nabespreking haast geen enkel punt in de route meer voor de geest kon halen. Dat deed er gelukkig ook niet meer toe, er was goed nieuws: ik was geslaagd!
-           </p>
-        </div>
+        <img class="portrait" alt="" src="https://pbs.twimg.com/profile_images/662675852929445893/_Sx0l93S_400x400.jpg">
+        <p><em>Vriendelijkheid, rust, duidelijkheid en af en toe een grapje</em> mag je van mij verwachten. Verder ben ik precies en gedreven. Perfectionist? Neehoor, maar ik haal wel graag het best mogelijke uit mijzelf.
+        </p>
+        <p>Mijn uitdaging als instructeur is om jou zo snel en goed mogelijk naar je rijbewijs te begeleiden door bij jouw behoeftes aan te sluiten. Een duidelijke uitleg met tekening? Gewoon nog eens proberen? We passen toe wat voor jou werkt.
+        </p>
+        <p>Voor ik mijn avontuur als rijinstructeur begon werkte ik als software ontwikkelaar, een creatief en uitdagend beroep. Ik ben omgeschoold tot rijinstructeur omdat ik het altijd al erg leuk vond om een ander iets te leren. 
+        </p>
+        <p>Ik was 22 toen ik mijn rijbewijs haalde. Wat een machtig gevoel om zo'n machine in beweging te zetten! Met mijn protesterende bankrekening vond ik het wel spannend of ik het in &eacute;&eacute;n keer zou halen. De laatste drie lessen was ik al zenuwachtig. Tijdens mijn examen was ik zo gestrest dat ik me bij de nabespreking haast geen enkel punt in de route meer voor de geest kon halen. Dat deed er gelukkig ook niet meer toe, er was goed nieuws: ik was geslaagd!
+        </p>     
       </div>
     </div>
   </div>
 
   <div class="section-wrapper" id="contact">
     <div class="section final-section">
+      <h1>Contact</h1>
+      <p>Heb je een vraag? Wil je graag les? Is er iets waar ik mee kan helpen? Neem dan gerust contact op. Wanneer ik rijles geef neem ik geen telefoon op. Mijn WhatsApp en e-mail bekijk ik meerdere keren per dag. Vrijwel altijd krijg je dezelfde dag antwoord.</p>
+      <br>
+      <p>renatebresser@hotmail.com</p>
+      <p>0681487522</p>
     </div>
   </div>
 
