--- a/index.html
+++ b/index.html
@@ -6,21 +6,19 @@
   <meta name="keywords" content="rijles, autorijles, deventer">
   <meta name="author" content="Renate Bresser">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Rijschool Renate</title>
+  <title>Rijbewijs in zicht</title>
   <link rel = "stylesheet" type = "text/css" href = "style.css" />
-  <link href="https://fonts.googleapis.com/css2?family=Hind+Vadodara:wght@300;400;500;600;700&display=swap" rel="stylesheet"> 
+  <link href="https://fonts.googleapis.com/css2?family=Hind+Vadodara:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Cabin+Sketch&display=swap" rel="stylesheet"> 
 </head>
 
 <body>
   <header>
-    <div class="navbar"></div>
+    <div class="navbar"><p class="navbar-text">RIJBEWIJS IN ZICHT</p></div>
     <div class="navbar-extension"></div>
 
     <div class="contact-items">
-      <a class="phone pointy-thingy" href="https://wa.me/31681487522" target="_blank">
-        <div>WhatsApp</div>
-      </a>
-      <a class="phone" href="tel:0681487522">06 8148 7522</a>
+      <a class="whatsapp-logo" href="https://wa.me/31681487522"><img src="images/whatsapp-logo.png"></a>
     </div>
 
     <div id="main-menu-toggle" class="menu-toggle">
@@ -57,67 +55,73 @@
 
 <div class="main">
   <div class="hero">
-    <img class="hero-img" src="https://www.anwb.nl/binaries/content/gallery/anwb/collecties/autotests/occasion/volkswagen/up/T__2003__3910000c.jpg" alt="">
-      
-    <div class="selling-points">
-      <div class="trial-lesson"><a href="https://wa.me/31681487522?text=Hallo%2C+ik+zou+graag+een+gratis+proefles+willen+boeken" class="inner" target="_blank">boek nu een gratis proefles</a></div>
+    <!--<div class="trial-lesson"><a href="https://wa.me/31681487522?text=Hallo%2C+ik+zou+graag+een+gratis+proefles+willen+boeken" class="inner" target="_blank">boek nu een gratis proefles</a></div>-->
+    <div class="soon soon-header">Binnenkort geopend!</div>
+    <div class="soon">verwacht: februari 2021</div>
+    <div class="soon">
+      Ik nodig je van harte uit de site te bekijken. Spreekt het je aan? Maak nu alvast kennis en geniet van een leuke
     </div>
+    <a class="soon-link" href="#actie">Actie</a>
   </div>
 
   <div class="section-wrapper">
     <div class="section">
-      <div class="assets">
+      <div class="assets">  
         <div class="asset">
           <div>
-            Duidelijke opbouw in de lessen en leren op jouw tempo
+            <div class="check"></div>Vaste instructeur
           </div>
         </div>
-        <div class="asset">
-          <div>Alle lestijd alleen voor jou, je hoeft niemand op te halen of weg te brengen
-          </div>
-        </div>
+
         <div class="asset">
           <div>
-            Lessen in examengebied Deventer
-          </div>
-        </div>
-        <div class="asset">
-          <div>
-            Rijden in een veilige en zuinige lesauto
-          </div>
-        </div>
-        <div class="asset">
-          <div>
-            maandag tot en met zondag en in de avonden
-          </div>
-        </div>
-        <div class="asset">
-          <div>
-            Vaste instructeur
-          </div>
-        </div>
-        <div class="asset">
-          <div>
-            Geen wachttijd
+            <div class="check"></div>Ook les op zaterdag en zondag
           </div>
         </div>
       </div>
     </div>
   </div>
 
+  <div class="section-wrapper" id="actie"> 
+    <div class="section">
+      <h1>Krijg een les cadeau</h1>
+      <p class="actie">
+        Maak je voor 31 december kennis, dan krijg je niet alleen je proefles, maar ook de daaropvolgende rijles cadeau. Het enige wat je daarvoor hoeft te doen is contact op te nemen via WhatsApp, bellen of per e-mail en aan te geven dat je van deze actie gebruik wil maken. Ik hou je vervolgens op de hoogte van de precieze startdatum van de rijschool.
+      </p>
+
+      <div class="contact-buttons contact-buttons-actie">
+        <a href="https://wa.me/31681487522" class="contact-button contact-button-whatsapp contact-button-actie">WhatsApp</a>
+        <a href="mailto:renatebresser@hotmail.com" class="contact-button contact-button-e-mail contact-button-actie">E-mail</a>
+        <a href="tel:0681487522" class="contact-button contact-button-phone contact-button-actie">Bel</a>
+      </div>
+
+      <div class="wrap-collabsible">
+        <input id="collapsible" class="toggle" type="checkbox">
+        <label for="collapsible" class="lbl-toggle">bekijk de voorwaarden</label>
+        <div class="collapsible-content">
+          <div class="content-inner">
+            <ul>
+              <li>1 les cadeau per persoon.</li>
+              <li>De les kan niet doorgegeven worden aan iemand anders.</li>
+              <li>De cadeau-les kan gebruikt worden tot en met juni 2021 op basis van beschikbaarheid.</li>
+              <li>Wanneer je de ingeplande les niet binnen 24 uur afgezegt, of wanneer je niet komt opdagen vervalt de cadeau-les. Deze kan dan niet op een ander moment ingehaald worden.</li>
+            </ul>
+            <p>Overigens verplicht je jezelf niet om van de actie gebruik te maken wanneer je contact opneemt. Je verplicht jezelf ook niet om meerdere rijlessen af te nemen wanneer je van de actie gebruik maakt.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
   <div class="section-wrapper" id="headline2"> 
     <div class="section">
       <h1>Lesprijs</h1>
-      <div class="costs-explained">
-        <p>Afgezien van acties en proeflessen betaal je voor ieder uur dezelfde prijs. Je betaalt steeds de ingeplande lessen vooruit per bankoverschrijving of tikkie.</p>
-        <p>Voor de examens betaal je de kosten die het CBR rekent en de tijd die je vooraf en tijdens het examen rijdt, zonder bijkomende kosten.
-        </p>
-      </div>
       <div class="prices">
         <div class="item-description-price">
           <div>
             <div class="priced-item">Rijles</div>
-            <div class="item-description">1 uur (60 minuten)</div>
+            <div class="item-description">60 minuten</div>
           </div>
           <div class="item-price nowrap">&euro; 38</div>
         </div>
@@ -145,6 +149,55 @@
       </div>
 
       <div class="costs-explained">
+        <p>Afgezien van acties en proeflessen betaal je voor ieder uur dezelfde prijs of je nu een losse les neemt, of meerdere lessen tegelijk afspreekt. Zo kun je precies kiezen wat bij jou past. </p> 
+        <p>Voor een examen of toets betaal je de kosten die het CBR rekent en de tijd die je vooraf en tijdens het examen rijdt, zonder bijkomende kosten. </p> 
+        <p>Hieronder vindt je een aantal pakketten om je een idee te geven van de prijs. Natuurlijk zijn andere combinaties ook mogelijk.
+        </p>
+      </div>
+
+      <div class="packages">
+
+        <div class="package package-1">
+          <div class="package-title">Pakket 1</div>
+          <ul>
+            <li>30 lessen</li>
+            <li>praktijkexamen</li>
+          </ul>
+          <div class="package-price">&euro; 1336</div>
+        </div>
+
+        <div class="package package-2">
+          <div class="package-title">Pakket 2</div>
+          <ul>
+            <li>30 lessen</li>
+            <li>tussentijdse toets</li>
+            <li>praktijkexamen</li>
+          </ul>
+          <div class="package-price">&euro; 1532</div>
+        </div>
+
+        <div class="package package-3">
+          <div class="package-title">Pakket 3</div>
+          <ul>
+            <li>40 lessen</li>
+            <li>praktijkexamen</li>
+          </ul>
+          <div class="package-price">&euro; 1716</div>
+        </div>
+
+        <div class="package package-4">
+          <div class="package-title">Pakket 4</div>
+          <ul>
+            <li>40 lessen</li>
+            <li>tussentijdse toets</li>
+            <li>praktijkexamen</li>
+          </ul>
+          <div class="package-price">&euro; 1912</div>
+        </div>
+
+      </div>
+
+      <div class="costs-explained">
         <p>Gemiddeld neemt men 38,56 uur les en haalt men het examen in 2 keer. Wil je meer weten over de kosten waar je rekening mee moet houden? Lees dan het artikel van het CBR: <a href="https://www.cbr.nl/rijbewijstips/kosten-rijbewijs-halen/" target="_blank">Wat kost een rijbewijs halen gemiddeld?</a>
         </p>
       </div>
@@ -155,26 +208,32 @@
     <div class="section">
       <h1>Dit ben ik</h1>
       <div class="about-me">
-        <img class="portrait" alt="" src="https://pbs.twimg.com/profile_images/662675852929445893/_Sx0l93S_400x400.jpg">
-        <p><em>Vriendelijkheid, rust, duidelijkheid en af en toe een grapje</em> mag je van mij verwachten. Verder ben ik precies en gedreven. Perfectionist? Neehoor, maar ik haal wel graag het best mogelijke uit mijzelf.
+        <img class="portrait" alt="" src="images/portret.png">
+        <p><em>Vriendelijkheid, rust, duidelijkheid en af en toe een grapje</em> mag je van mij verwachten. Verder ben ik precies en gedreven. Ik vind mezelf geen perfectionist, maar voel me wel het meest op mijn gemak als ik weet dat ik iets heel goed doe, daar doe ik dan ook mijn best voor.
         </p>
         <p>Mijn uitdaging als instructeur is om jou zo snel en goed mogelijk naar je rijbewijs te begeleiden door bij jouw behoeftes aan te sluiten. Een duidelijke uitleg met tekening? Gewoon nog eens proberen? We passen toe wat voor jou werkt.
         </p>
         <p>Voor ik mijn avontuur als rijinstructeur begon werkte ik als software ontwikkelaar, een creatief en uitdagend beroep. Ik ben omgeschoold tot rijinstructeur omdat ik het altijd al erg leuk vond om een ander iets te leren. 
         </p>
-        <p>Ik was 22 toen ik mijn rijbewijs haalde. Wat een machtig gevoel om zo'n machine in beweging te zetten! Met mijn protesterende bankrekening vond ik het wel spannend of ik het in &eacute;&eacute;n keer zou halen. De laatste drie lessen was ik al zenuwachtig. Tijdens mijn examen was ik zo gestrest dat ik me bij de nabespreking haast geen enkel punt in de route meer voor de geest kon halen. Dat deed er gelukkig ook niet meer toe, er was goed nieuws: ik was geslaagd!
+   
+        <h2>Mijn rijbewijs</h2>
+        <p>Ik was 22 toen ik mijn rijbewijs haalde. Wat een machtig gevoel om zo'n machine in beweging te zetten! Met mijn protesterende bankrekening in gedachten vond ik het wel spannend of ik het in &eacute;&eacute;n keer zou halen. De laatste drie lessen was ik al zenuwachtig. Tijdens mijn examen was ik zo gestrest dat ik me bij de nabespreking haast geen enkel punt in de route meer voor de geest kon halen. Dat deed er gelukkig ook niet meer toe, er was goed nieuws: ik was geslaagd!
         </p>     
       </div>
     </div>
   </div>
 
   <div class="section-wrapper" id="contact">
-    <div class="section final-section">
+    <div class="section">
       <h1>Contact</h1>
-      <p>Heb je een vraag? Wil je graag les? Is er iets waar ik mee kan helpen? Neem dan gerust contact op. Wanneer ik rijles geef neem ik geen telefoon op. Mijn WhatsApp en e-mail bekijk ik meerdere keren per dag. Vrijwel altijd krijg je dezelfde dag antwoord.</p>
-      <br>
-      <p>renatebresser@hotmail.com</p>
-      <p>0681487522</p>
+      <p class="contact-text">Wanneer ik rijles geef neem ik geen telefoon op. Mijn WhatsApp en e-mail bekijk ik meerdere keren per dag. Vrijwel altijd krijg je dezelfde dag antwoord.</p>
+      <div class="contact-buttons">
+        <a href="https://wa.me/31681487522" class="contact-button contact-button-whatsapp">WhatsApp</a>
+        <a href="mailto:renatebresser@hotmail.com" class="contact-button contact-button-e-mail">E-mail</a>
+        <a href="tel:0681487522" class="contact-button contact-button-phone">Bel</a>
+      </div>
+      <p class="contact-text">renatebresser@hotmail.com</p>
+      <p class="contact-text">0681487522</p>
     </div>
   </div>
 
