--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
   <header>
-    <div class="navbar"><p class="navbar-text">RIJBEWIJS IN ZICHT</p></div>
+    <div class="navbar"><p class="navbar-text"><a href="#">RIJBEWIJS IN ZICHT</a></p></div>
     <div class="navbar-extension"></div>
 
     <div class="contact-items">
@@ -106,7 +106,7 @@
               <li>De cadeau-les kan gebruikt worden tot en met juni 2021 op basis van beschikbaarheid.</li>
               <li>Wanneer je de ingeplande les niet binnen 24 uur afgezegt, of wanneer je niet komt opdagen vervalt de cadeau-les. Deze kan dan niet op een ander moment ingehaald worden.</li>
             </ul>
-            <p>Overigens verplicht je jezelf niet om van de actie gebruik te maken wanneer je contact opneemt. Je verplicht jezelf ook niet om meerdere rijlessen af te nemen wanneer je van de actie gebruik maakt.</p>
+            <p>Overigens verplicht je jezelf niet om van de actie gebruik te maken wanneer je contact opneemt. Je verplicht jezelf ook niet om meerdere rijlessen af te nemen.</p>
           </div>
         </div>
       </div>
@@ -130,69 +130,94 @@
             <div class="priced-item">CBR Tussentijdse toets</div>
             <div class="item-description">2 uur waarvan 55 minuten toets</div>
           </div>
-          <div class="item-price nowrap">&euro; 196</div>
+          <div class="item-price nowrap">&euro; 206</div>
         </div>        
         <div class="item-description-price">
           <div>
             <div class="priced-item">CBR praktijkexamen</div>
             <div class="item-description">2 uur waarvan 55 minuten examen</div>
           </div>
-          <div class="item-price nowrap">&euro; 196</div>
+          <div class="item-price nowrap">&euro; 206</div>
         </div>       
+        <div class="item-description-price">
+          <div>      
+            <div class="priced-item">Nader onderzoek rijvaardigheid (BNOR)</div>
+            <div class="item-description">2 uur waarvan 1 uur en 10 minuten examen</div>
+          </div>
+          <div class="item-price nowrap">&euro; 223</div>
+        </div>
         <div class="item-description-price">
           <div>      
             <div class="priced-item">CBR faalangst praktijkexamen</div>
             <div class="item-description">2 uur waarvan 1 uur en 20 minuten examen</div>
           </div>
-          <div class="item-price nowrap">&euro; 244</div>
+          <div class="item-price nowrap">&euro; 254</div>
         </div>
       </div>
 
       <div class="costs-explained">
-        <p>Afgezien van acties en proeflessen betaal je voor ieder uur dezelfde prijs of je nu een losse les neemt, of meerdere lessen tegelijk afspreekt. Zo kun je precies kiezen wat bij jou past. </p> 
-        <p>Voor een examen of toets betaal je de kosten die het CBR rekent en de tijd die je vooraf en tijdens het examen rijdt, zonder bijkomende kosten. </p> 
-        <p>Hieronder vindt je een aantal pakketten om je een idee te geven van de prijs. Natuurlijk zijn andere combinaties ook mogelijk.
+        <p>Afgezien van acties en proeflessen betaal je voor ieder uur dezelfde prijs of je nu een losse les neemt, of meerdere lessen tegelijk afspreekt. Zo kun je precies kiezen wat bij jou past en is het altijd duidelijk wat het kost.  </p>  
+        <p>Hieronder heb ik vast een aantal combinaties voor je uitgerekend om je een idee te geven van de prijs. Natuurlijk zijn andere combinaties ook mogelijk.
         </p>
       </div>
 
       <div class="packages">
 
         <div class="package package-1">
-          <div class="package-title">Pakket 1</div>
+          <div class="package-title">20</div>
           <ul>
-            <li>30 lessen</li>
+            <li>20 lessen</li>
             <li>praktijkexamen</li>
           </ul>
-          <div class="package-price">&euro; 1336</div>
+          <div class="package-price">&euro; 966</div>
         </div>
 
         <div class="package package-2">
-          <div class="package-title">Pakket 2</div>
+          <div class="package-title">20 TTT</div>
+          <ul>
+            <li>20 lessen</li>
+            <li>tussentijdse toets</li>
+            <li>praktijkexamen</li>
+          </ul>
+          <div class="package-price">&euro; 1172</div>
+        </div>
+
+        <div class="package package-3">
+          <div class="package-title">30</div>
+          <ul>
+            <li>30 lessen</li>
+            <li>praktijkexamen</li>
+          </ul>
+          <div class="package-price">&euro; 1346</div>
+        </div>
+
+        <div class="package package-4">
+          <div class="package-title">30 TTT</div>
           <ul>
             <li>30 lessen</li>
             <li>tussentijdse toets</li>
             <li>praktijkexamen</li>
           </ul>
-          <div class="package-price">&euro; 1532</div>
+          <div class="package-price">&euro; 1552</div>
         </div>
 
-        <div class="package package-3">
-          <div class="package-title">Pakket 3</div>
+        <div class="package package-5">
+          <div class="package-title">40</div>
           <ul>
             <li>40 lessen</li>
             <li>praktijkexamen</li>
           </ul>
-          <div class="package-price">&euro; 1716</div>
+          <div class="package-price">&euro; 1726</div>
         </div>
 
-        <div class="package package-4">
-          <div class="package-title">Pakket 4</div>
+        <div class="package package-6">
+          <div class="package-title">40 TTT</div>
           <ul>
             <li>40 lessen</li>
             <li>tussentijdse toets</li>
             <li>praktijkexamen</li>
           </ul>
-          <div class="package-price">&euro; 1912</div>
+          <div class="package-price">&euro; 1932</div>
         </div>
 
       </div>
@@ -209,15 +234,15 @@
       <h1>Dit ben ik</h1>
       <div class="about-me">
         <img class="portrait" alt="" src="images/portret.png">
-        <p><em>Vriendelijkheid, rust, duidelijkheid en af en toe een grapje</em> mag je van mij verwachten. Verder ben ik precies en gedreven. Ik vind mezelf geen perfectionist, maar voel me wel het meest op mijn gemak als ik weet dat ik iets heel goed doe, daar doe ik dan ook mijn best voor.
+        <p><em>Vriendelijkheid, rust, duidelijkheid en af en toe een grapje</em> mag je van mij verwachten.
         </p>
-        <p>Mijn uitdaging als instructeur is om jou zo snel en goed mogelijk naar je rijbewijs te begeleiden door bij jouw behoeftes aan te sluiten. Een duidelijke uitleg met tekening? Gewoon nog eens proberen? We passen toe wat voor jou werkt.
+        <p>Mijn uitdaging als instructeur is om jou goed mogelijk naar je rijbewijs te begeleiden door bij jouw behoeftes aan te sluiten. Misschien merk je dat het beter gaat als we verkeerssituaties stilstaand bespreken, of is het voor jou juist belangrijk om iets al rijdend te proberen. We passen toe wat voor jou werkt.
         </p>
         <p>Voor ik mijn avontuur als rijinstructeur begon werkte ik als software ontwikkelaar, een creatief en uitdagend beroep. Ik ben omgeschoold tot rijinstructeur omdat ik het altijd al erg leuk vond om een ander iets te leren. 
         </p>
    
         <h2>Mijn rijbewijs</h2>
-        <p>Ik was 22 toen ik mijn rijbewijs haalde. Wat een machtig gevoel om zo'n machine in beweging te zetten! Met mijn protesterende bankrekening in gedachten vond ik het wel spannend of ik het in &eacute;&eacute;n keer zou halen. De laatste drie lessen was ik al zenuwachtig. Tijdens mijn examen was ik zo gestrest dat ik me bij de nabespreking haast geen enkel punt in de route meer voor de geest kon halen. Dat deed er gelukkig ook niet meer toe, er was goed nieuws: ik was geslaagd!
+        <p>Ik was 22 toen ik mijn rijbewijs haalde. Wat een machtig gevoel om zo'n machine in beweging te zetten! Met mijn protesterende bankrekening in gedachten vond ik het wel spannend of ik het in &eacute;&eacute;n keer zou halen. De laatste drie lessen voor het examen was ik al zenuwachtig, maar ik slaagde in &eacute;&eacute;n keer! Ik kocht al snel een autootje, een peugeot 205. Heerlijk vond ik dat, in mijn eentje in de auto, overal heen kunnen waar je maar heen wil. Ik hoop dat jij daar straks net zo van geniet als ik.
         </p>     
       </div>
     </div>
