--- a/index.html
+++ b/index.html
@@ -129,20 +129,23 @@
           <div>   
             <div class="priced-item">CBR Tussentijdse toets</div>
             <div class="item-description">2 uur waarvan 55 minuten toets</div>
+            <a class="read-more" href="https://www.cbr.nl/nl/rijbewijs-halen/auto/praktijkexamen-auto/tussentijdse-toets-doen.htm" target="_blank">lees meer over de toets</a>
           </div>
           <div class="item-price nowrap">&euro; 206</div>
-        </div>        
+        </div>
         <div class="item-description-price">
           <div>
             <div class="priced-item">CBR praktijkexamen</div>
             <div class="item-description">2 uur waarvan 55 minuten examen</div>
+            <a class="read-more" href="https://www.cbr.nl/nl/rijbewijs-halen/auto/praktijkexamen-auto/hoe-gaat-het-praktijkexamen-auto.htm" target="_blank">lees meer over het examen</a>
           </div>
           <div class="item-price nowrap">&euro; 206</div>
         </div>       
         <div class="item-description-price">
           <div>      
-            <div class="priced-item">Nader onderzoek rijvaardigheid (BNOR)</div>
+            <div class="priced-item">BNOR (4x gezakt)</div>
             <div class="item-description">2 uur waarvan 1 uur en 10 minuten examen</div>
+            <a class="read-more" href="https://www.cbr.nl/nl/rijbewijs-halen/auto/praktijkexamen-auto/4-keer-gezakt.htm" target="_blank">lees meer over het examen</a>
           </div>
           <div class="item-price nowrap">&euro; 223</div>
         </div>
@@ -150,6 +153,7 @@
           <div>      
             <div class="priced-item">CBR faalangst praktijkexamen</div>
             <div class="item-description">2 uur waarvan 1 uur en 20 minuten examen</div>
+            <a class="read-more" href="https://www.cbr.nl/nl/rijbewijs-halen/auto/praktijkexamen-auto/faalangst-rijexamen.htm" target="_blank">lees meer over het examen</a>
           </div>
           <div class="item-price nowrap">&euro; 254</div>
         </div>
@@ -223,7 +227,7 @@
       </div>
 
       <div class="costs-explained">
-        <p>Gemiddeld neemt men 38,56 uur les en haalt men het examen in 2 keer. Wil je meer weten over de kosten waar je rekening mee moet houden? Lees dan het artikel van het CBR: <a href="https://www.cbr.nl/rijbewijstips/kosten-rijbewijs-halen/" target="_blank">Wat kost een rijbewijs halen gemiddeld?</a>
+        <p>Gemiddeld neemt men 38,56 uur les en haalt men het examen in 2 keer. Wil je meer weten over de kosten waar je rekening mee moet houden? Lees dan het artikel van het CBR: <a href="https://www.cbr.nl/nl/rijbewijs-halen/auto/kosten-autorijbewijs-halen.htm" target="_blank">Wat kost een rijbewijs halen gemiddeld?</a>
         </p>
       </div>
     </div>
