link aangepast cbrartikel

--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
       </div>
 
       <div class="costs-explained">
-        <p>Gemiddeld neemt men 38,56 uur les en haalt men het examen in 2 keer. Wil je meer weten over de kosten waar je rekening mee moet houden? Lees dan het artikel van het CBR: <a href="https://www.cbr.nl/nl/rijbewijs-halen/auto/kosten-autorijbewijs-halen.htm" target="_blank">Wat kost een rijbewijs halen gemiddeld?</a>
+        <p>Gemiddeld neemt men 38,56 uur les en haalt men het examen in 2 keer. Wil je meer weten over de kosten waar je rekening mee moet houden? Lees dan het artikel van het CBR: <a href="https://www.cbr.nl/nl/rijbewijs-halen/auto/kosten-autorijbewijs-halen.htm" target="_blank">Kosten autorijbewijs halen</a>
         </p>
       </div>
     </div>
