--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
       </a>
       <ul>
         <li><a class="home" href="#">Home</a></li>
-        <li><a class="blue" href="#headline2">Lesprijs</a></li>
-        <li><a class="yellow" href="#headline1">Over mij</a></li>
+        <li><a class="blue" href="#lesprijs">Lesprijs</a></li>
+        <li><a class="yellow" href="#over-mij">Over mij</a></li>
         <li><a class="orange" href="#contact">Contact</a></li>
       </ul>
     </nav>
@@ -114,7 +114,7 @@
   </div>
 
 
-  <div class="section-wrapper" id="headline2"> 
+  <div class="section-wrapper" id="lesprijs"> 
     <div class="section">
       <h1>Lesprijs</h1>
       <div class="prices">
@@ -233,7 +233,7 @@
     </div>
   </div>
  
-  <div class="section-wrapper" id="headline1">
+  <div class="section-wrapper" id="over-mij">
     <div class="section">
       <h1>Dit ben ik</h1>
       <div class="about-me">
