vergeten woordje toegevoegd

--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
         <img class="portrait" alt="" src="images/portret.png">
         <p><em>Vriendelijkheid, rust, duidelijkheid en af en toe een grapje</em> mag je van mij verwachten.
         </p>
-        <p>Mijn uitdaging als instructeur is om jou goed mogelijk naar je rijbewijs te begeleiden door bij jouw behoeftes aan te sluiten. Misschien merk je dat het beter gaat als we verkeerssituaties stilstaand bespreken, of is het voor jou juist belangrijk om iets al rijdend te proberen. We passen toe wat voor jou werkt.
+        <p>Mijn uitdaging als instructeur is om jou zo goed mogelijk naar je rijbewijs te begeleiden door bij jouw behoeftes aan te sluiten. Misschien merk je dat het beter gaat als we verkeerssituaties stilstaand bespreken, of is het voor jou juist belangrijk om iets al rijdend te proberen. We passen toe wat voor jou werkt.
         </p>
         <p>Voor ik mijn avontuur als rijinstructeur begon werkte ik als software ontwikkelaar, een creatief en uitdagend beroep. Ik ben omgeschoold tot rijinstructeur omdat ik het altijd al erg leuk vond om een ander iets te leren. 
         </p>
