achtergrond veranderd en blauwe L toegevoegd

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
   <header>
-    <div class="navbar"><p class="navbar-text"><a href="#">RIJBEWIJS IN ZICHT</a></p></div>
+    <div class="navbar"><p class="navbar-text"><a href="#">Rijbewijs in zicht</a></p></div>
     <div class="navbar-extension"></div>
 
     <div class="contact-items">
