--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
       <div class="contact-buttons contact-buttons-actie">
         <a href="https://wa.me/31681487522" class="contact-button contact-button-whatsapp contact-button-actie">WhatsApp</a>
-        <a href="mailto:renatebresser@hotmail.com" class="contact-button contact-button-e-mail contact-button-actie">E-mail</a>
+        <a href="mailto:renate@rijbewijsinzicht.nl" class="contact-button contact-button-e-mail contact-button-actie">E-mail</a>
         <a href="tel:0681487522" class="contact-button contact-button-phone contact-button-actie">Bel</a>
       </div>
 
@@ -258,11 +258,12 @@
       <p class="contact-text">Wanneer ik rijles geef neem ik geen telefoon op. Mijn WhatsApp en e-mail bekijk ik meerdere keren per dag. Vrijwel altijd krijg je dezelfde dag antwoord.</p>
       <div class="contact-buttons">
         <a href="https://wa.me/31681487522" class="contact-button contact-button-whatsapp">WhatsApp</a>
-        <a href="mailto:renatebresser@hotmail.com" class="contact-button contact-button-e-mail">E-mail</a>
+        <a href="mailto:renate@rijbewijsinzicht.nl" class="contact-button contact-button-e-mail">E-mail</a>
         <a href="tel:0681487522" class="contact-button contact-button-phone">Bel</a>
       </div>
-      <p class="contact-text">renatebresser@hotmail.com</p>
+      <p class="contact-text">renate@rijbewijsinzicht.nl</p>
       <p class="contact-text">0681487522</p>
+      <p class="contact-text">KVK 80750761</p>
     </div>
   </div>
 
